fixed screen margin on iphone rotation

--- a/sc.css
+++ b/sc.css
@@ -105,7 +105,7 @@ body{
     border-radius:40px;
     display:block;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 .screen{
     height:60px;
@@ -113,7 +113,7 @@ body{
     border-radius:8px;
     position:relative;
     left:15px;
-    top:20px; 
+    top:40px; 
 }
 .screen input{
     background-color:#99ccff;
@@ -251,7 +251,7 @@ p{
 .button.black{
     color:white;
     background-color:black;
-    font-size: 11px;
+    font-size: 10px;
 }
 
 .button.silver{
